# flowboard

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/flowboard/: __init__.py  engine.py  io.py  model.py  query.py  viz.py
src/flowboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_basic_flow.py
